--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "jspdf": "^3.0.4",
     "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "lucide-react": "^0.561.0",
-    "jspdf-autotable": "^5.0.2",
-    "react-dom": "^19.2.3"
+    "jspdf-autotable": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
